--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
         "drupal/core-recommended": "^10.2",
+        "drupal/devel": "^5.0",
         "drupal/gin": "^3.0@RC",
         "drupal/quick_node_clone": "^1.16",
         "drupal/twig_tweak": "^3.2",
