--- a/config/sync/block.block.stone_breadcrumbs.yml
+++ b/config/sync/block.block.stone_breadcrumbs.yml
@@ -1,6 +1,6 @@
 uuid: c3273e46-e740-4ba9-939b-143ea7cbcff9
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - system
@@ -10,8 +10,8 @@ _core:
   default_config_hash: y9X3xgCsO59pQyzNLzY1D3SDJJxCHILLWkpPnmuTJ2E
 id: stone_breadcrumbs
 theme: stone
-region: breadcrumb
-weight: 0
+region: header
+weight: -1
 provider: null
 plugin: system_breadcrumb_block
 settings:
