--- a/config/sync/block.block.stone_messages.yml
+++ b/config/sync/block.block.stone_messages.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: WvPhI8OwllG0gE69-F8qL3ai3nd5SbYD6JpmEuZcyok
 id: stone_messages
 theme: stone
-region: header
-weight: 0
+region: content
+weight: -2
 provider: null
 plugin: system_messages_block
 settings:
