Add js babel compression

--- a/web/themes/stone/package.json
+++ b/web/themes/stone/package.json
@@ -10,12 +10,18 @@
   "author": "Laurynas Rup",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^9.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-dart-sass": "^1.1.0",
     "gulp-sass": "^5.1.0",
     "node-sass": "^9.0.0",
     "sass": "^1.69.7"
   },
+  "browserslist": [
+    "last 1 version"
+  ],
   "dependencies": {}
 }
